assets/css/style.css
body {

}

.title {
    font-family: "DM Sans";
    font-style: normal;
    font-size: 36px;
    font-weight: 700;
    line-height: 47px;
    letter-spacing: 0em;
    color: #D04F4F;
}

.search_field, .search_button {
    background: #E7E7E7;
}

.search_field {
    border-right: unset;
}

.search_button {
    border: 1px solid #ced4da;
    border-left: unset;
    border-top-right-radius: .375rem;
    border-bottom-right-radius: .375rem;
}

.input-group-text.fa.fa-search {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: unset;
    height: 100%;
    border: unset;
}

.ingredient_tag, .appliance_tag, .ustensil_tag {
    display: inline-block;
}

.ingredient_tag, .appliance_tag, .ustensil_tag, .ingredient_tag:hover, .appliance_tag:hover, .ustensil_tag:hover, .ingredient_tag:focus, .appliance_tag:focus, .ustensil_tag:focus  {
    color: #FFF;
}

.btn.dropdown-toggle {
    font-family: "Lato";
    font-style: normal;
    font-size: 18px;
    font-weight: 700;
    line-height: 22px;
    letter-spacing: 0em;
    text-align: center;
    color: #FFF;
}

.ingredient_tag:hover, .btn.dropdown-toggle.first_color:hover, .btn.dropdown-toggle.first_color:focus, .first_color {
    background: #3282F7;
}

.appliance_tag:hover, .btn.dropdown-toggle.second_color:hover, .btn.dropdown-toggle.second_color:focus, .second_color {
    background: #68D9A4;
}

.ustensil_tag:hover, .btn.dropdown-toggle.third_color:hover, .btn.dropdown-toggle.third_color:focus, .third_color {
    background: #ED6454;
}

#ingredients_dropdown_menu,
#appliances_dropdown_menu,
#ustensils_dropdown_menu {
    position: absolute;
    left: 0;
    top: 50px;
    max-height: 400px;
    overflow-y: scroll;
    transform: translate3d(0, 0, 0)
}

#ingredients_dropdown_menu {
    background: #3282F7;
}
  
#appliances_dropdown_menu {
    background: #68D9A4;
}
  
#ustensils_dropdown_menu {
    background: #ED6454;
}
  
#ingredients_dropdown_menu .row, #appliances_dropdown_menu .row, #ustensils_dropdown_menu .row {
    flex-flow: nowrap;
}

#ingredients_dropdown_menu .dropdown-item,
#appliances_dropdown_menu .dropdown-item,
#ustensils_dropdown_menu .dropdown-item{
    color: #FFF;
}

#ingredients_dropdown_menu .dropdown-item:hover {
    background-color: #296CEA;
}
#appliances_dropdown_menu .dropdown-item:hover {
    background-color: #56BE89;
}
#ustensils_dropdown_menu .dropdown-item:hover {
    background-color: #D95346;
}

.card {
    border-radius: 5px;
}

.image {
    background: #C7BEBE;
    width: 100%;
    min-height: 100px;
}

.description {
    display: flex;
    flex-direction: column;
    background: #E7E7E7;
    padding: 10px;
    font-family: 'Lato';
    font-style: normal;
    color: #000;   
}

.description__header {
    display: flex;
    justify-content: space-between;
}

.description__header__title {
    font-size: 18px;
    font-weight: 400;
    line-height: 22px;
}

.description__header__required_time {
    min-width: 90px;
    text-align: right;
    font-size: 18px;
    font-weight: 700;
    line-height: 22px;
}

.description__content {
    display: flex;
    justify-content: space-between;
    font-size: 12px;
    font-weight: 400;
    line-height: 14px;
}

.description__content__ingredients {
    width: 49%;
}

.description__content__ingredients .ingredients{
    font-weight: 700;
}

.description__content__preparation {
    display: -webkit-box;
    width: 49%;
    -webkit-line-clamp: 13;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

